ALS-3852: Update stopwords